--- a/_sass/additional/_tag.scss
+++ b/_sass/additional/_tag.scss
@@ -1,5 +1,6 @@
 @use "style";
 
+// 为文章内容生成标签样式
 .article__content {
   @each $type, $color in style.$status-colors {
     @include style.tag($type, $color);
