--- a/_includes/scripts/variables.html
+++ b/_includes/scripts/variables.html
@@ -1,13 +1,9 @@
 {%- include snippets/get-sources.html -%}
 {%- assign _sources = __return -%}
 
-{%- include snippets/get-nav-url.html path="/assets/search.js" -%}
-{%- assign _paths_search_js = __return -%}
-
 <script>
   (function() {
     var TEXT_VARIABLES = {
-      version: '2.2.6',
       sources: {
         font_awesome: '{{ _sources.font_awesome }}',
         jquery: '{{ _sources.jquery }}',
@@ -23,11 +19,11 @@
       },
       site: {
         toc: {
-          selectors: '{{ site.toc.selectors | default: site.data.variables.default.toc.selectors }}'
+          selectors: '{{ site.toc.selectors }}'
         }
       },
       paths: {
-        search_js: '{{ _paths_search_js }}'
+        search_js: '/assets/search.js'
       }
     };
     window.TEXT_VARIABLES = TEXT_VARIABLES;
