--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -3,27 +3,22 @@ layout: none
 ---
 <!DOCTYPE html>
 
-{%- include snippets/get-lang.html -%}
-
-<html lang="{{ __return }}">
+<html lang='{{ site.lang }}'>
   <head>
-    {%- include analytics.html -%}
     {%- include head.html -%}
+    {%- include scripts/variables.html -%}
 
     <script>
       {%- include scripts/utils/utils.js -%}
       {%- include scripts/lib/throttle.js -%}
       {%- include scripts/lib/lazyload.js -%}
+      {%- include analytics.html -%}
+      {%- include scripts/common.js -%}
     </script>
-    
-    {%- include scripts/variables.html -%}
   </head>
 
   <body>
-    <div class="root" data-is-touch="false">{{ content }}</div>
-
-    <script>
-      {%- include scripts/common.js -%}
-    </script>
+    <div class="root">{{ content }}</div>
   </body>
+  
 </html>
